%% ============================================
%% AutoAgents - Database Design (DBD)
%% AI-Powered Software Development Assistant
%% ============================================
%% Diagram Type: Entity-Relationship Diagram
%% Purpose: Shows MongoDB collections structure,
%% fields, data types, and relationships
%% ============================================

erDiagram
    %% ============================================
    %% USERS Collection
    %% Stores user account information
    %% ============================================
    USERS {
        ObjectId _id PK "Primary Key"
        string name "User display name"
        string email UK "Unique email address"
        string password_hash "Bcrypt hashed password"
        datetime created_at "Account creation timestamp"
        datetime updated_at "Last update timestamp"
        boolean is_active "Account status flag"
    }

    %% ============================================
    %% PROJECTS Collection
    %% Stores software project definitions
    %% ============================================
    PROJECTS {
        ObjectId _id PK "Primary Key"
        ObjectId user_id FK "Reference to USERS"
        string title "Project title (3-180 chars)"
        text prompt "User requirements/description"
        string status "created|processing|completed|failed"
        datetime created_at "Project creation timestamp"
        datetime updated_at "Last modification timestamp"
    }

    %% ============================================
    %% FEATURES Collection
    %% Stores features generated by Agent-1
    %% ============================================
    FEATURES {
        ObjectId _id PK "Primary Key"
        string project_id FK "Reference to PROJECTS"
        string feature_text "Feature title and description"
        int order_index "Display order (1-12)"
        array acceptance_criteria "List of acceptance criteria"
        datetime created_at "Generation timestamp"
        string generated_by "agent1|manual"
    }

    %% ============================================
    %% STORIES Collection
    %% Stores user stories generated by Agent-2
    %% ============================================
    STORIES {
        ObjectId _id PK "Primary Key"
        string project_id FK "Reference to PROJECTS"
        string feature_id FK "Reference to FEATURES"
        string story_text "As a... I want... So that..."
        array acceptance_criteria "Given-When-Then criteria"
        array implementation_notes "Technical notes"
        datetime created_at "Generation timestamp"
        string generated_by "agent2|manual"
    }

    %% ============================================
    %% DESIGNS Collection
    %% Stores Mermaid diagrams generated by Agent-3
    %% ============================================
    DESIGNS {
        ObjectId _id PK "Primary Key"
        string project_id FK "Reference to PROJECTS"
        text hld_mermaid "High-Level Design diagram code"
        text lld_mermaid "Low-Level Design diagram code"
        text dbd_mermaid "Database Design diagram code"
        json style_config "Mermaid styling configuration"
        datetime created_at "Generation timestamp"
        datetime updated_at "Last regeneration timestamp"
        string version "Diagram version number"
    }

    %% ============================================
    %% FEEDBACK Collection
    %% Stores user feedback and chatbot interactions
    %% ============================================
    FEEDBACK {
        ObjectId _id PK "Primary Key"
        string project_id FK "Reference to PROJECTS"
        string design_id FK "Reference to DESIGNS"
        string user_message "User feedback message"
        string ai_response "Chatbot response"
        string diagram_type "hld|lld|dbd"
        array suggestions "AI-generated suggestions"
        datetime created_at "Feedback timestamp"
        boolean applied "Whether suggestion was applied"
    }

    %% ============================================
    %% SESSIONS Collection
    %% Stores user authentication sessions
    %% ============================================
    SESSIONS {
        ObjectId _id PK "Primary Key"
        ObjectId user_id FK "Reference to USERS"
        string token_hash "JWT token hash"
        datetime created_at "Session start"
        datetime expires_at "Session expiration"
        string ip_address "Client IP address"
        string user_agent "Browser user agent"
        boolean is_valid "Session validity flag"
    }

    %% ============================================
    %% AUDIT_LOG Collection
    %% Tracks system activities for debugging
    %% ============================================
    AUDIT_LOG {
        ObjectId _id PK "Primary Key"
        ObjectId user_id FK "Reference to USERS"
        string action "Action performed"
        string entity_type "projects|features|stories|designs"
        string entity_id "ID of affected entity"
        json changes "Before/after values"
        datetime timestamp "Action timestamp"
        string ip_address "Client IP"
    }

    %% ============================================
    %% Relationships
    %% ============================================
    
    %% User owns multiple Projects (1:N)
    USERS ||--o{ PROJECTS : "owns"
    
    %% User has multiple Sessions (1:N)
    USERS ||--o{ SESSIONS : "authenticates"
    
    %% User generates Audit Logs (1:N)
    USERS ||--o{ AUDIT_LOG : "generates"
    
    %% Project contains multiple Features (1:N)
    %% Agent-1 generates 8-12 features per project
    PROJECTS ||--o{ FEATURES : "contains"
    
    %% Project contains multiple Stories (1:N)
    PROJECTS ||--o{ STORIES : "contains"
    
    %% Feature has multiple Stories (1:N)
    %% Agent-2 generates 2-3 stories per feature
    FEATURES ||--o{ STORIES : "has"
    
    %% Project has one Design document (1:1)
    %% Contains HLD, LLD, and DBD diagrams
    PROJECTS ||--|| DESIGNS : "has"
    
    %% Design receives Feedback (1:N)
    DESIGNS ||--o{ FEEDBACK : "receives"
    
    %% Project has Feedback history (1:N)
    PROJECTS ||--o{ FEEDBACK : "has"

